bug fix - on mobile mode, menu closes when button is pressed.

--- a/src/App.css
+++ b/src/App.css
@@ -165,15 +165,17 @@ h2{
   }
 
   #menuClose{
+    margin-top: 20px;
     background: none;
     border: none;
     padding: none;
-    height: 95%;
-    width: 100%;
+    height: 50%;
+    width: 50%;
     outline-style: none;
   }
-  #menuCloseIcon{
-    color: var(--clr-gray)
+  #menuClose svg{
+    width: 50px;
+    height: 50px;
   }
 
   .logoIcon{
